# Ktorjan-C

./: CMakeLists.txt  README.md
binary_porgram/: ktorjan  kvictim
include/: kvictim.h  server.h
lib/: ktorjan_lib.c  kvictim_lib.c  server_lib.c
src/: ktorjan.c  kvictim.c
